Signing scripts, GUI enhancements

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,18 @@ Tunnels/installer/MacOS/LICENSE
 Tunnels/go/GUI/dymium
 Tunnels/go/GUI/config.txt
 Tunnels/go/GUI/dymiumgui.app/Contents/MacOS/dymium
+web/devcerts/index.txt.attr.old
+web/devcerts/index.txt.old
+Tunnels/go/GUI/dymium_signing_csr.txt
+Tunnels/go/GUI/dymiumgui.app/Contents/_CodeSignature/CodeResources
+Tunnels/go/GUI/dymiumsign.key
+Tunnels/installer/MacOS/macOS-x64/target/darwinpkg/Library/dymiumapp/0.0.2/.gitkeep
+Tunnels/installer/MacOS/macOS-x64/target/darwinpkg/Library/dymiumapp/0.0.2/uninstall.sh
+Tunnels/installer/MacOS/macOS-x64/target/package/dymiumapp.pkg
+Tunnels/installer/MacOS/macOS-x64/target/pkg-signed/dymiumapp-macos-installer-x64-0.0.2.pkg
+Tunnels/installer/MacOS/macOS-x64/target/pkg/dymiumapp-macos-installer-x64-0.0.2.pkg
+Tunnels/installer/MacOSPackages/build/DymiumTunnel.pkg
+Tunnels/installer/MacOSPackages/developer_log.json
+Tunnels/installer/MacOSPackages/DymiumTunnel.pkg
+Tunnels/installer/MacOSPackages/DymiumTunnel.pkgproj
+web/js/packages/portal/public/DymiumInstaller.pkg
