--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ Tunnels/installer/MacOSPackages/DymiumTunnel.pkg
 Tunnels/installer/MacOSPackages/DymiumTunnel.pkgproj
 web/js/packages/portal/public/DymiumInstaller.pkg
 Tunnels/go/client/dymium
+Tunnels/go/GUI/dymiumgui.app/Contents/MacOS/dymium.cstemp
