[oracle] DbGuardian: switch back to ubuntu
- Oracle instant clients are not supposed to work with Alpine
  (although there are statements on Internet about successful
  attempts to use Oracle binaries there - I just think we should
  be on the conservative side here)
- scripts to copy Oracle instantclient binaries to/from AWS
- installation of instantclient binaries on postgres-dev and
  DbGuardian dockers and compilation of oracle_fdw with these binaries

--- a/DbGuardian/foreign_data_wrappers/mysql_fdw/Makefile
+++ b/DbGuardian/foreign_data_wrappers/mysql_fdw/Makefile
@@ -12,7 +12,7 @@ DATA = mysql_fdw--1.0.sql mysql_fdw--1.1.sql mysql_fdw--1.0--1.1.sql
 
 REGRESS = server_options connection_validation dml select pushdown join_pushdown aggregate_pushdown limit_offset_pushdown misc
 
-MYSQL_CONFIG = mysql_config
+MYSQL_CONFIG = mariadb_config
 PG_CPPFLAGS := $(shell $(MYSQL_CONFIG) --include)
 LIB := $(shell $(MYSQL_CONFIG) --libs)
 
