--- a/DbGuardian/scripts/Dockerfile
+++ b/DbGuardian/scripts/Dockerfile
@@ -1,19 +1,19 @@
-FROM postgres:14-alpine
+FROM ubuntu/postgres
 
-RUN apk add ca-certificates \
-  mysql-client mariadb-connector-c-dev \
-  freetds
+RUN apt update &&                \
+  apt upgrade -y &&              \
+  apt install -y ca-certificates \
+    libmariadb3 libmariadb-dev   \
+    freetds-bin                  \
+    libaio1 &&                   \
+  mkdir -p /opt/oracle
+
+COPY ./instantclient_21_8/ /opt/oracle/instantclient_21_8/
+RUN echo /opt/oracle/instantclient_21_8 > /etc/ld.so.conf.d/oracle-instantclient.conf && \
+    ldconfig
 
 COPY initializer /docker-entrypoint-initdb.d/initializer.sh
 RUN chmod 777 /docker-entrypoint-initdb.d/initializer.sh
 
-COPY postgres_fdw.so mysql_fdw.so tds_fdw.so /usr/local/lib/postgresql/
-RUN chmod 755 \
-  /usr/local/lib/postgresql/postgres_fdw.so \
-  /usr/local/lib/postgresql/mysql_fdw.so \
-  /usr/local/lib/postgresql/tds_fdw.so
-
-COPY \
-  mysql_fdw.control mysql_fdw--1.1.sql \
-  tds_fdw.control tds_fdw.sql \
-  /usr/local/share/postgresql/extension/
+COPY usr.tar.gz /
+RUN tar xzvf /usr.tar.gz && rm /usr.tar.gz
