--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ web/js/packages/portal/public/DymiumInstaller.pkg
 Tunnels/go/client/dymium
 Tunnels/go/GUI/dymiumgui.app/Contents/MacOS/dymium.cstemp
 Tunnels/go/meshconnector/__debug_bin
+Tunnels/go/meshconnector/meshconnector
+Tunnels/go/meshserver/__debug_bin
