--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ Tunnels/go/GUI/dymiumgui.app/Contents/MacOS/dymium.cstemp
 Tunnels/go/meshconnector/__debug_bin
 Tunnels/go/meshconnector/meshconnector
 Tunnels/go/meshserver/__debug_bin
+web/go/src/server
