--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -20,6 +20,7 @@
     "@types/react-bootstrap-table-next": "^4.0.18",
     "@types/react-bootstrap-typeahead": "^5.1.8",
     "@types/react-dom": "^18.0.4",
+    "array-move": "^4.0.0",
     "autoprefixer": "10.4.5",
     "beautiful-react-hooks": "^3.2.3",
     "bootstrap": "4.6.1",
@@ -40,6 +41,7 @@
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-sortable-hoc": "^2.0.0",
     "react-test-renderer": "^18.2.0",
     "react-toggle": "^4.1.3",
     "redux-logger": "^3.0.6",
