Use zstd instead of UPX for linux/{dataTypesGenerator,mallard}

--- a/Utils/mallard/mallard.cabal
+++ b/Utils/mallard/mallard.cabal
@@ -65,7 +65,7 @@ executable mallard
     hs-source-dirs:     app
     default-language:   Haskell2010
 
-    ghc-options:        -Wall
+    ghc-options:        -Wall -threaded
 
     other-modules:      Config
 
