--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -48,6 +48,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.52.2",
     "typescript": "^4.6.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "resolutions": {
