--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ Tunnels/go/meshconnector/__debug_bin
 Tunnels/go/meshconnector/meshconnector
 Tunnels/go/meshserver/__debug_bin
 web/go/src/server
+Tunnels/go/meshconnector/aws.sh
+Tunnels/go/meshconnector/gcp.sh
+Tunnels/go/meshconnector/runproderr.sh
