--- a/web/js/packages/admin/package.json
+++ b/web/js/packages/admin/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "start": "HTTPS=true DANGEROUSLY_DISABLE_HOST_CHECK=true SSL_CRT_FILE=../../../devcerts/dymium.crt SSL_KEY_FILE=../../../devcerts/dymium.key HOST=portal.dymium.local PORT=3000 react-app-rewired  start",
-    "build": "mkdir -p ../../../go/assets/admin && react-scripts build && cp -r build/* ../../../go/assets/admin",
+    "build": "mkdir -p ../../../go/assets/admin && react-app-rewired  build && cp -r build/* ../../../go/assets/admin",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -61,6 +61,7 @@
   },
   "proxy": "http://admin.dymium.local",
   "devDependencies": {
-    "@types/bootstrap": "^5.1.12"
+    "@types/bootstrap": "^5.1.12",
+    "html-loader": "^4.2.0"
   }
 }
