--- a/web/js/packages/admin/tsconfig.json
+++ b/web/js/packages/admin/tsconfig.json
@@ -26,7 +26,7 @@
     },
   },
   "paths": {
-    "@dymium/common/*": ["../common/*"]
+    "@dymium/common/*": ["../common/*", ["../common/Api/*"]
   },
     "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
