--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -82,6 +82,7 @@
     "customize-cra": "^1.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "html-loader": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.2",
     "react-app-rewired": "^2.2.1"
