--- a/DataTypes/Admin.yaml
+++ b/DataTypes/Admin.yaml
@@ -1,7 +1,6 @@
 ---
 module: Admin
 
-
 Customer:
   - id: ?string
   - name: string
@@ -9,3 +8,8 @@ Customer:
   - schema: string  
   - domain: string
   - admingroup: string
+
+DeleteCustomer:
+  - id: string
+  - schema: string 
+
