--- a/web/js/packages/admin/package.json
+++ b/web/js/packages/admin/package.json
@@ -22,9 +22,11 @@
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-bootstrap-typeahead": "^6.0.0-rc.1",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.52.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.0"
