--- a/.github/workflows/webserver-unit-test.yaml
+++ b/.github/workflows/webserver-unit-test.yaml
@@ -71,7 +71,7 @@ jobs:
           AUTH0_ADMIN_AUDIENCE: 'https://admin.dymium.local/api/handler'
           AUTH0_ADMIN_ORGANIZATION: "org_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
 
-
+          SPOOFCORP_KEY: "6874AB957AA1F505EC6ACC84162B131FA5513558BB64ACEF294388AE6ECDA9C9"          
           AUTH0_PORTAL_DOMAIN: 'https://dymium-dev.us.auth0.com/'
           AUTH0_PORTAL_CLIENT_ID: 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'
           AUTH0_PORTAL_CLIENT_SECRET: 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'
