--- a/DataTypes/DbAnalyzer.yaml
+++ b/DataTypes/DbAnalyzer.yaml
@@ -26,14 +26,14 @@ TableInfoParams:
 
 AnalyzerResponse:
   - dtype: DataType
-  - dbInfo: ?DatabaseInfo
-  - tblInfo: ?TableInfo
+  - dbInfo: ?DatabaseInfoData
+  - tblInfo: ?TableInfoData
 
-DatabaseInfo:
+DatabaseInfoData:
   - dbName: string
   - schemas: <| schema |>
 
-TableInfo:
+TableInfoData:
   - dbName: string
   - schema: string
   - tblName: string
