[smarter-analyzer] gettable provisioned

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -38,6 +38,10 @@ ConnectionsQuery:
   - errormessage: ?string
   - records: ?<|ConnectionRecord|>
 
+TableQuery:
+  - id: string
+  - schema: string
+  - table: string
 
 reference:
   - schema: string
