[smarter-analyzer] Some minor fixes, not working yet with dbAnalyzer

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -39,7 +39,7 @@ ConnectionsQuery:
   - records: ?<|ConnectionRecord|>
 
 TableQuery:
-  - id: string
+  - connectionId: string
   - schema: string
   - table: string
 
