full stack works with the schema changes
full stack works with the schema changes
Db schema has changed - run mallard!

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -62,6 +62,7 @@ DatascopeRecord:
   - semantics: string
   - dflt: ?string
   - isnullable: bool
+  - possibleActions: <|string|>
 
 DatascopeIdName:
   - name: string
