[smarter-analyzer] display group status in EditDatascopes

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -88,6 +88,7 @@ RequestById:
 Datascope:
   - name: string
   - id:  ?string		
+  - groupsconfigured: bool
   - records: <|DatascopeRecord|>
 
 OperationStatus:
