[#212] Fix for bug #212

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -67,6 +67,8 @@ DatascopeRecord:
 DatascopeIdName:
   - name: string
   - id: string	
+  - created: string
+  - modified: string
 
 DatascopeId:
   - id: string
