[public-connector-docker] public connector, fix for #183

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ Tunnels/go/meshconnector/meshconnector
 Tunnels/go/meshconnector/.meshconnector.exe.new
 Tunnels/go/meshconnector/meshconnector.exe.old
 Tunnels/go/meshconnector/meshconnector.exe.old1
+web/go/gotest
