--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -41,7 +41,6 @@
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
     "react-sortable-hoc": "^2.0.0",
     "react-test-renderer": "^18.2.0",
     "react-toggle": "^4.1.3",
@@ -86,6 +85,7 @@
     "html-loader": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.2",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "react-scripts": "5.0.1"
   }
 }
