[#330] This is not a full fix, but a helper. Connector will update the status on close.

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -194,3 +194,9 @@ DataPolicy:
 # GUI handling
 AccessLevels:
   - levels: <|DataAction|>
+
+SetConnectorStatus:
+  - customer: string
+  - key: string
+  - secret: string
+  - status: string
