[meshclient-versioning-improvements] some cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,5 @@ Tunnels/go/meshconnector/meshconnector.exe.old
 Tunnels/go/meshconnector/meshconnector.exe.old1
 web/go/gotest
 web/js/yarn-error.log
+Tunnels/go/meshconnector/meshconnector.0.1.2.bak
+Tunnels/go/meshserver/meshserver
