[connector-0507] misc changes, more robust but still hicks up

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@ web/go/gotest
 web/js/yarn-error.log
 Tunnels/go/meshconnector/meshconnector.0.1.2.bak
 Tunnels/go/meshserver/meshserver
+Tunnels/go/meshconnector/output.txt
+Tunnels/go/meshconnector/trace.out
