[meshconnector-fixes-06-12] misc fixes, self update works in a docker, and in an app

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,4 @@ Tunnels/go/meshconnector/meshconnector.0.1.2.bak
 Tunnels/go/meshserver/meshserver
 Tunnels/go/meshconnector/output.txt
 Tunnels/go/meshconnector/trace.out
+Tunnels/go/meshconnector/meshconnector.0.1.3.bak
