--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ Tunnels/go/meshserver/meshserver
 Tunnels/go/meshconnector/output.txt
 Tunnels/go/meshconnector/trace.out
 Tunnels/go/meshconnector/meshconnector.0.1.3.bak
+web/go/src/dymium
