--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,5 @@ Tunnels/go/meshconnector/output.txt
 Tunnels/go/meshconnector/trace.out
 Tunnels/go/meshconnector/meshconnector.0.1.3.bak
 web/go/src/dymium
+Tunnels/go/meshserver/output.txt
+Tunnels/go/meshconnector/connector.go.old
