--- a/DbGuardian/obfuscator/Cargo.toml
+++ b/DbGuardian/obfuscator/Cargo.toml
@@ -12,7 +12,10 @@ pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
 pg_test = []
 
 [dependencies]
-pgx = "=0.7.4"
+pgx = "^0.7.0"
+aes = "^0.8.0"
+lazy_static = "^1.4.0"
+typenum = "^1.16.0"
 
 [dev-dependencies]
 pgx-tests = "=0.7.4"
