Add DB2 data source (#512)
* [db-fdw] Added db2 fdw to DbGuardian

* [db-fdw] Added downloading db2 libs from s3

* [db-fdw]

* [db-fdw] Added db2.go

* [db-fdw] Changed build scripts

* [db-fdw] Added DB2 connection type

* [db-fdw] Added DB2 driver/config

* [db-fdw] changed create foreign table for DB2 to option(table 'select...')

* [db-fdw] sync with main branch

* [db-fdw] sync with main branch

* [db-fdw] fixing data types

* [db-fdw] fixing data types - DBCLOB is not supported by fdw, CLOb is not samplable

* [db-fdw] mapping boolean to bpchar

* [db-fdw] Set XML to unsupported

* [db-fdw] merge with main

* [db-fdw] switching to git-subtree for db2_fdw

* Squashed 'DbGuardian/foreign_data_wrappers/db2_fdw/' content from commit 6ec0a50

git-subtree-dir: DbGuardian/foreign_data_wrappers/db2_fdw
git-subtree-split: 6ec0a50d8c46896362f3fa32f8527acf0fb4a006

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -7,6 +7,7 @@ ConnectionType:
   - MariaDB    <*> MariaDB Database
   - SqlServer  <*> Microsoft SQL Server
   - OracleDB   <*> Oracle Database
+  - DB2        <*> IBM DB2 Database
 
 ConnectionPortsType:
   - PostgreSQL_5432
@@ -14,6 +15,7 @@ ConnectionPortsType:
   - MariaDB_3306
   - SqlServer_1433
   - OracleDB_1521
+  - DB2_50000
 
 GroupMapping:
   - id: ?string
