--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ Tunnels/go/meshconnector/meshconnector.0.1.3.bak
 web/go/src/dymium
 Tunnels/go/meshserver/output.txt
 Tunnels/go/meshconnector/connector.go.old
+DbAnalyzer/scripts/.localrun.sh.swp
