--- a/.github/workflows/webserver-unit-test.yaml
+++ b/.github/workflows/webserver-unit-test.yaml
@@ -34,10 +34,6 @@ jobs:
       - run: go version    
       - name: ubuntu version
         run: cat /etc/os-release
-      # Downloads a copy of the code in your repository before running CI tests
-      - name: Check out repository code
-        uses: actions/checkout@v3
-
       - name: update
         run: apt-get update
       - name: Install CA list
@@ -49,14 +45,19 @@ jobs:
       - name: Install zstd
         run: apt install -y zstd
       - name: Install git annex
-        run: apt install -y git-annex
+        run: apt install -y git git-annex
+
+      # Downloads a copy of the code in your repository before running CI tests
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
       - name: Install binary utilities
-        working-directory: .
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.DYMIUM_DEV_BINARY_UTILITIES_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.DYMIUM_DEV_BINARY_UTILITIES_SECRET }}
           AWS_REGION: us-west-2
         run: |
+          pwd
           git annex init
           git annex enableremote dymium-dev-binary-utilities
           git annex get --from=dymium-dev-binary-utilities bin/
