--- a/.github/workflows/webserver-unit-test.yaml
+++ b/.github/workflows/webserver-unit-test.yaml
@@ -55,13 +55,13 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.DYMIUM_DEV_BINARY_UTILITIES_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.DYMIUM_DEV_BINARY_UTILITIES_SECRET }}
           AWS_REGION: us-west-2
-        working-directory: /__w/Dev/Dev
         run: |
           pwd
           ls -lA
           git config --global user.email "dev@dymium.io"
           git config --global user.name "GitHub Robot"
-          git annex init
+          git remote -v
+          git annex init -d 'zzz'
           git annex enableremote dymium-dev-binary-utilities
           git annex get --from=dymium-dev-binary-utilities bin/
       - name: Run tests
