--- a/.github/workflows/webserver-unit-test.yaml
+++ b/.github/workflows/webserver-unit-test.yaml
@@ -56,12 +56,10 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.DYMIUM_DEV_BINARY_UTILITIES_SECRET }}
           AWS_REGION: us-west-2
         run: |
-          pwd
-          ls -lA
           git config --global user.email "dev@dymium.io"
           git config --global user.name "GitHub Robot"
           git config --global --add safe.directory /__w/Dev/Dev
-          git remote -v
+          git pull origin git-annex:git-annex
           git annex init -d 'zzz'
           git annex enableremote dymium-dev-binary-utilities
           git annex get --from=dymium-dev-binary-utilities bin/
