--- a/web/js/packages/admin/package.json
+++ b/web/js/packages/admin/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.11.0",
+    "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.62.1",
     "web-vitals": "^3.3.1"
@@ -57,7 +58,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@types/bootstrap": "^5.1.12",
     "html-loader": "^4.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^5.0.4"
   }
 }
