--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -67,6 +67,7 @@
   "proxy": "http://portal.dymium.local",
   "devDependencies": {
     "@babel/core": "^7.21.8",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
