--- a/.github/workflows/portal-unit-test.yaml
+++ b/.github/workflows/portal-unit-test.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16.15.0
+          node-version: v20.8.0
       - name: Install
         working-directory: ./web/js/packages/portal
         # can't overcome a warning from bootstrap
