[machine-tunnel] add tunnel, schema

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -211,3 +211,10 @@ SetConnectorStatus:
   - key: string
   - secret: string
   - status: string
+  
+MachineTunnel:
+  - id: ?string
+  - accesskey: ?string
+  - secret: ?string
+  - name: string
+  - groups: <|string|>
