--- a/mallard.cabal
+++ b/mallard.cabal
@@ -76,7 +76,6 @@ executable mallard
                       , exceptions
                       , fgl
                       , hasql
-                      , hasql-optparse-applicative
                       , hasql-pool
                       , lens
                       , mtl
@@ -86,26 +85,4 @@ executable mallard
                       , path-io
                       , text
                       , unordered-containers
-
-test-suite test-mallard
-    type:               exitcode-stdio-1.0
-    main-is:            Test.hs
-    hs-source-dirs:     test
-    default-language:   Haskell2010
-
-    ghc-options:        -Wall
-
-    other-modules:      Test.Integration
-
-    build-depends:      base            ==4.*
-
-                      , mallard
-
-                      , contravariant
-                      , hasql
-                      , hasql-pool
-                      , path
-                      , tasty
-                      , tasty-quickcheck
-                      , tasty-hunit
-                      , turtle
+                      , time
