[machine-tunnel] checkpoint

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -217,4 +217,6 @@ MachineTunnel:
   - accesskey: ?string
   - secret: ?string
   - name: string
+  - username: ?string
+  - password: ?string
   - groups: <|string|>
