--- a/ktDbAnalyzerSvc/build.gradle
+++ b/ktDbAnalyzerSvc/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     implementation "io.ktor:ktor-server-call-id-jvm"
     implementation "io.ktor:ktor-server-netty-jvm"
     implementation "ch.qos.logback:logback-classic:$logback_version"
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+
 
     // Databases: jdbc drivers - TODO: add more drivers here
     implementation "com.mysql:mysql-connector-j:8.1.0"
