[machine-tunnel] Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,5 @@ Tunnels/go/machineclient/machineclient
 Tunnels/go/machineclient/src/machineclient
 Tunnels/go/machineclient/src/output.txt
 Tunnels/go/meshconnector/meshconnector_linux_amd64.tgz
+Tunnels/go/meshconnector/meshconnector_linux_amd64.tgz
+Tunnels/go/machineclient/src/output.txt
