[machine-tunnel] make docker urls configurable

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -220,3 +220,8 @@ MachineTunnel:
   - username: ?string
   - password: ?string
   - groups: <|string|>
+
+DockerDownloads:
+  - meshconnector: string
+  - machineclient: string
+
