[client-fix-beginning-of-clone] add redirecto

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,4 @@ Tunnels/go/machineclient/src/output.txt
 Tunnels/go/meshconnector/meshconnector_linux_amd64.tgz
 Tunnels/go/meshconnector/meshconnector_linux_amd64.tgz
 Tunnels/go/machineclient/src/output.txt
+setup/ktDbAnalyzerSvc-0.0.1.tar
