--- a/ktDbAnalyzerSvc/gradle.properties
+++ b/ktDbAnalyzerSvc/gradle.properties
@@ -6,3 +6,6 @@ kotlin.code.style=official
 # Koin
 koin_ktor_version=3.5.1
 koin_ksp_version=1.2.2
+
+#properties
+org.gradle.caching=true # enable gradle caching
