--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@ Tunnels/go/meshconnector/meshconnector_linux_amd64.tgz
 Tunnels/go/meshconnector/meshconnector_linux_amd64.tgz
 Tunnels/go/machineclient/src/output.txt
 setup/ktDbAnalyzerSvc-0.0.1.tar
+Tunnels/go/server/tunnel/server.mgo
