--- a/ktDbAnalyzerSvc/build.gradle
+++ b/ktDbAnalyzerSvc/build.gradle
@@ -28,11 +28,13 @@ dependencies {
     implementation "io.ktor:ktor-server-netty-jvm"
     implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-slf4j:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
 
 
 
     // Databases: jdbc drivers - TODO: add more drivers here
-    implementation "com.mysql:mysql-connector-j:8.1.0"
+    implementation 'com.mysql:mysql-connector-j:8.2.0'
     implementation "org.postgresql:postgresql:42.6.0"
     implementation "com.oracle.database.jdbc:ojdbc8:23.3.0.23.09"
     implementation "com.ibm.db2:jcc:11.5.8.0"
