--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,4 @@ Tunnels/go/server/tunnel/server.mgo
 Tunnels/go/meshserver/profile001.svg
 Tunnels/go/machineclient/src/go.mod.old
 Tunnels/go/machineclient/src/meshconnector.1.0.1.bak
+Tunnels/go/meshconnector/meshconnector.1.0.0.bak
