--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ Tunnels/go/meshserver/profile001.svg
 Tunnels/go/machineclient/src/go.mod.old
 Tunnels/go/machineclient/src/meshconnector.1.0.1.bak
 Tunnels/go/meshconnector/meshconnector.1.0.0.bak
+setup/aws-update-igor.xsh
